[gd_scene load_steps=5 format=4 uid="uid://bjr6nbnjpuhle"]

[ext_resource type="Script" uid="uid://cdqnqdfjl2ck4" path="res://scenes/ui/options_menu.gd" id="1_wj2x4"]
[ext_resource type="Texture2D" uid="uid://bedd7ff762vev" path="res://TileSetF2D.png" id="2_imaij"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ebjn"]
texture = ExtResource("2_imaij")
5:1/0 = 0
2:2/0 = 0
5:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
13:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
13:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
5:10/0 = 0
13:10/0 = 0
14:10/0 = 0
2:11/0 = 0
3:11/0 = 0
7:11/0 = 0
8:11/0 = 0
2:12/0 = 0
3:12/0 = 0
5:12/0 = 0
7:12/0 = 0
8:12/0 = 0
2:14/0 = 0
4:14/0 = 0
6:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0

[sub_resource type="TileSet" id="TileSet_ob46e"]
sources/0 = SubResource("TileSetAtlasSource_0ebjn")

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_wj2x4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAUAAAAAAAEAAAADAAUAAAAAAAIAAAADAAUAAAAAAAMAAAADAAUAAAAAAAQAAAADAAUAAAAAAAUAAAADAAUAAAAAAAYAAAADAAUAAAAAAAcAAAADAAUAAAAAAAgAAAADAAUAAAAAAAkAAAADAAUAAAABAAAAAAADAAUAAAABAAEAAAACAAUAAAABAAIAAAACAAUAAAABAAMAAAACAAUAAAABAAQAAAADAAUAAAABAAUAAAACAAUAAAABAAYAAAACAAUAAAABAAcAAAACAAUAAAABAAgAAAACAAUAAAABAAkAAAAJAAYAAAACAAAAAAADAAUAAAACAAEAAAAKAAYAAAACAAIAAAAKAAcAAAACAAMAAAAKAAgAAAACAAQAAAADAAUAAAACAAUAAAACAAUAAAACAAYAAAACAAUAAAACAAcAAAAJAAYAAAACAAgAAAAKAAcAAAACAAkAAAAJAAcAAAADAAAAAAADAAUAAAADAAEAAAACAAUAAAADAAIAAAACAAUAAAADAAMAAAACAAUAAAADAAQAAAACAAUAAAADAAUAAAACAAUAAAADAAYAAAACAAUAAAADAAcAAAAJAAYAAAADAAgAAAAKAAcAAAADAAkAAAAKAAcAAAAEAAAAAAADAAUAAAAEAAEAAAACAAUAAAAEAAIAAAAJAAYAAAAEAAMAAAAJAAcAAAAEAAQAAAACAAUAAAAEAAUAAAACAAUAAAAEAAYAAAACAAUAAAAEAAcAAAACAAUAAAAEAAgAAAACAAUAAAAEAAkAAAACAAUAAAAFAAAAAAADAAUAAAAFAAEAAAACAAUAAAAFAAIAAAACAAUAAAAFAAMAAAACAAUAAAAFAAQAAAACAAUAAAAFAAUAAAACAAUAAAAFAAYAAAACAAUAAAAFAAcAAAACAAUAAAAFAAgAAAACAAUAAAAFAAkAAAACAAUAAAAGAAAAAAADAAUAAAAGAAEAAAACAAUAAAAGAAIAAAACAAUAAAAGAAMAAAACAAUAAAAGAAQAAAACAAUAAAAGAAUAAAACAAUAAAAGAAYAAAACAAUAAAAGAAcAAAACAAUAAAAGAAgAAAACAAUAAAAGAAkAAAACAAUAAAAHAAAAAAADAAUAAAAHAAEAAAACAAUAAAAHAAIAAAACAAUAAAAHAAMAAAACAAUAAAAHAAQAAAACAAUAAAAHAAUAAAACAAUAAAAHAAYAAAACAAUAAAAHAAcAAAACAAUAAAAHAAgAAAACAAUAAAAHAAkAAAACAAUAAAAIAAAAAAADAAUAAAAIAAEAAAACAAUAAAAIAAIAAAAJAAYAAAAIAAMAAAAKAAcAAAAIAAQAAAACAAUAAAAIAAUAAAACAAUAAAAIAAYAAAACAAUAAAAIAAcAAAACAAUAAAAIAAgAAAACAAUAAAAIAAkAAAACAAUAAAAJAAAAAAADAAUAAAAJAAEAAAACAAUAAAAJAAIAAAACAAUAAAAJAAMAAAACAAUAAAAJAAQAAAACAAUAAAAJAAUAAAACAAUAAAAJAAYAAAACAAUAAAAJAAcAAAACAAUAAAAJAAgAAAACAAUAAAAJAAkAAAACAAUAAAAKAAAAAAADAAUAAAAKAAEAAAACAAUAAAAKAAIAAAAJAAYAAAAKAAMAAAAKAAcAAAAKAAQAAAACAAUAAAAKAAUAAAACAAUAAAAKAAYAAAACAAUAAAAKAAcAAAACAAUAAAAKAAgAAAACAAUAAAAKAAkAAAACAAUAAAALAAAAAAADAAUAAAALAAEAAAACAAUAAAALAAIAAAACAAUAAAALAAMAAAACAAUAAAALAAQAAAACAAUAAAALAAUAAAACAAUAAAALAAYAAAACAAUAAAALAAcAAAACAAUAAAALAAgAAAACAAUAAAALAAkAAAACAAUAAAAMAAAAAAADAAUAAAAMAAEAAAAKAAYAAAAMAAIAAAAKAAcAAAAMAAMAAAAKAAcAAAAMAAQAAAAKAAcAAAAMAAUAAAAJAAcAAAAMAAYAAAAEAAQAAAAMAAcAAAADAAUAAAAMAAgAAAAJAAYAAAAMAAkAAAAKAAcAAAANAAAAAAADAAUAAAANAAEAAAACAAUAAAANAAIAAAACAAUAAAANAAMAAAAJAAYAAAANAAQAAAAJAAcAAAANAAUAAAAEAAQAAAANAAYAAAAEAAQAAAANAAcAAAADAAUAAAANAAgAAAACAAUAAAANAAkAAAACAAUAAAAOAAAAAAADAAUAAAAOAAEAAAACAAUAAAAOAAIAAAACAAUAAAAOAAMAAAACAAUAAAAOAAQAAAAEAAQAAAAOAAUAAAAEAAQAAAAOAAYAAAAEAAQAAAAOAAcAAAADAAUAAAAOAAgAAAAJAAYAAAAOAAkAAAAJAAcAAAAAAAoAAAADAAUAAAAAAAsAAAADAAUAAAAAAAwAAAADAAUAAAAAAA0AAAABAAMAAAAAAA4AAAABAAMAAAAAAA8AAAABAAMAAAABAAoAAAAKAAcAAAABAAsAAAAKAAgAAAABAAwAAAADAAUAAAABAA0AAAABAAUAAAABAA4AAAABAAUAAAABAA8AAAABAAMAAAACAAoAAAACAAUAAAACAAsAAAACAAUAAAACAAwAAAADAAUAAAACAA0AAAABAAUAAAACAA4AAAABAAUAAAACAA8AAAABAAMAAAADAAoAAAAKAAcAAAADAAsAAAAKAAgAAAADAAwAAAADAAUAAAADAA0AAAABAAUAAAADAA4AAAABAAUAAAADAA8AAAABAAMAAAAEAAoAAAACAAUAAAAEAAsAAAACAAUAAAAEAAwAAAACAAUAAAAEAA0AAAABAAQAAAAEAA4AAAAEAAUAAAAEAA8AAAABAAMAAAAFAAoAAAACAAUAAAAFAAsAAAACAAUAAAAFAAwAAAACAAUAAAAFAA0AAAABAAUAAAAFAA4AAAAEAAUAAAAFAA8AAAABAAMAAAAGAAoAAAACAAUAAAAGAAsAAAACAAUAAAAGAAwAAAACAAUAAAAGAA0AAAAEAAUAAAAGAA4AAAAEAAUAAAAGAA8AAAABAAMAAAAHAAoAAAACAAUAAAAHAAsAAAACAAUAAAAHAAwAAAACAAUAAAAHAA0AAAABAAUAAAAHAA4AAAAEAAUAAAAHAA8AAAABAAMAAAAIAAoAAAACAAUAAAAIAAsAAAACAAUAAAAIAAwAAAACAAUAAAAIAA0AAAABAAUAAAAIAA4AAAABAAUAAAAIAA8AAAABAAMAAAAJAAoAAAACAAUAAAAJAAsAAAACAAUAAAAJAAwAAAACAAUAAAAJAA0AAAABAAUAAAAJAA4AAAABAAUAAAAJAA8AAAABAAMAAAAKAAoAAAACAAUAAAAKAAsAAAACAAUAAAAKAAwAAAACAAUAAAAKAA0AAAABAAUAAAAKAA4AAAABAAQAAAAKAA8AAAABAAMAAAALAAoAAAACAAUAAAALAAsAAAAEAAQAAAALAAwAAAADAAUAAAALAA0AAAABAAUAAAALAA4AAAABAAUAAAALAA8AAAABAAMAAAAMAAoAAAAJAAcAAAAMAAsAAAAHAAUAAAAMAAwAAAADAAUAAAAMAA0AAAABAAUAAAAMAA4AAAAEAAUAAAAMAA8AAAABAAMAAAANAAoAAAACAAUAAAANAAsAAAAJAAUAAAANAAwAAAADAAUAAAANAA0AAAAEAAUAAAANAA4AAAAEAAUAAAANAA8AAAABAAMAAAAOAAoAAAACAAUAAAAOAAsAAAAKAAUAAAAOAAwAAAADAAUAAAAOAA0AAAABAAUAAAAOAA4AAAABAAUAAAAOAA8AAAABAAMAAAAPAA8AAAADAAUAAAAPAAAAAAADAAUAAAAPAAEAAAADAAUAAAAPAAIAAAADAAUAAAAPAAMAAAADAAUAAAAPAAQAAAADAAUAAAAPAAUAAAADAAUAAAAPAAYAAAADAAUAAAAPAAcAAAADAAUAAAAPAAgAAAADAAUAAAAPAAkAAAADAAUAAAAPAAoAAAADAAUAAAAPAAsAAAADAAUAAAAPAAwAAAADAAUAAAAPAA0AAAADAAUAAAAPAA4AAAADAAUAAAA=")
tile_set = SubResource("TileSet_ob46e")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.819608, 0.74902, 0.690196, 1)
theme_override_constants/outline_size = 4
text = "Options Menu"

[node name="SFX" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SFX" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFX"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFX"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="WindowMode" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WindowMode" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowMode"]
layout_mode = 2
text = "Window mode"

[node name="WindowButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowMode"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "WMode"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowMode/WindowButton" to="." method="_on_window_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
